# geant4-remora

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  Dockerfile  Dockerfile.test  LICENSE  README.md  build.ps1  build.sh  gps_test.cc
.devcontainer/: devcontainer.json
include/: ActionInit.hh  DetectorConstruction.hh  MessageManager.hh  PGA.hh  PhysicsList.hh  RemoraActionInit.hh  RemoraDependent.hh  RemoraG4Messenger.hh  RemoraStateMachine.hh  RemoraSteppingAction.hh  RemoraTrackingAction.hh  RemoraTrajectory.hh  RunAction.hh  SensitiveDetector.hh  cp_client.hh  cp_server.hh  cross_platform_sockets.hh
mac_files/: 1dgauss.mac  run.mac  test.mac  vis.mac
src/: ActionInit.cc  DetectorConstruction.cc  MessageManager.cc  RemoraActionInit.cc  RemoraG4Messenger.cc  RemoraStateMachine.cc  RemoraSteppingAction.cc  RemoraTrackingAction.cc  RemoraTrajectory.cc  RunAction.cc  SensitiveDetector.cc  cp_client.cc  cp_server.cc  cross_platform_sockets.cc
